# orca

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.agents/: opencode.json
.agents/scripts/: sync_skills.py
.agents/skills/analysis-pitfalls/: SKILL.md
.agents/skills/analysis-report/: SKILL.md
.agents/skills/dagster-expert/: SKILL.md
.agents/skills/dbt-analytics-engineering/: SKILL.md
.agents/skills/dbt-troubleshooting/: SKILL.md
.agents/skills/dlt-ingestion/: SKILL.md
.agents/skills/duckdb-query/: SKILL.md
.agents/skills/duckdb-scd/: SKILL.md
.agents/skills/gotchas-modeling/: SKILL.md
.agents/skills/gotchas-queries/: SKILL.md
.agents/skills/gotchas-rendering/: SKILL.md
.agents/skills/malloy/: SKILL.md
.agents/skills/malloy-analyze/: SKILL.md
.agents/skills/malloy-charts/: SKILL.md
.agents/skills/malloy-debug/: SKILL.md
.agents/skills/malloy-define/: SKILL.md
.agents/skills/malloy-discover/: SKILL.md
.agents/skills/malloy-document/: SKILL.md
.agents/skills/malloy-model/: SKILL.md
.agents/skills/malloy-model/reference/: access-modifiers.md  analysis-to-model.md  bridge-tables.md  normalized-schemas.md  query-sources.md
.agents/skills/malloy-modeling/: SKILL.md
.agents/skills/malloy-notebooks/: SKILL.md
.agents/skills/malloy-patterns/: SKILL.md
.agents/skills/malloy-queries/: SKILL.md
.agents/skills/malloy-review/: SKILL.md
.agents/skills/malloy-review/reference/: output-template.md  rubric-correctness.md  rubric-documentation.md  rubric-governance.md  rubric-queries.md  rubric-rendering.md  rubric-structure.md  rubric-style.md  scope-resolution.md  severity-taxonomy.md
.agents/skills/malloy-scope/: SKILL.md
.agents/skills/motherduck-ducklake/: SKILL.md
.agents/skills/skill-creator/: .openskills.json
.github/: secret_scanning.yml
.github/workflows/: publish_dbt_docs.yml  warehouse_execution.yml
analysis/: AGENTS.md
analytics/: AGENTS.md  malloy-config.json  model.malloy
analytics/dashboard/: app.py
ingestion/: AGENTS.md  hackernews.py  house_price_pipeline.py  iris_pipeline.py  products_pipeline.py  run_hackernews.py  utils.py
ingestion/.dlt/: config.toml
orchestration/: AGENTS.md  definitions.py
orchestration/dagster_home/: dagster.yaml
orchestration/dagster_home/history/: runs.db
orchestration/dagster_home/history/runs/: 0856eaeb-73ef-46f2-9617-7e41bc65cee2.db  7d0794fe-abfa-410b-9872-2a6dece63138.db  d53536fd-21ff-4a63-b4d1-613d92178ed8.db  index.db
orchestration/dagster_home/storage/0856eaeb-73ef-46f2-9617-7e41bc65cee2/compute_logs/: hflakixx.err  hflakixx.out
orchestration/dagster_home/storage/7d0794fe-abfa-410b-9872-2a6dece63138/compute_logs/: ucoxoobk.err  ucoxoobk.out
orchestration/dagster_home/storage/d53536fd-21ff-4a63-b4d1-613d92178ed8/compute_logs/: wopzrjmj.err  wopzrjmj.out
storage/: clean_ducklake.sql  configure_ducklake.sql
storage/orca.ducklake.files/raw/items/: ducklake-019f5afb-42a6-7f14-baaf-d53f78267207.parquet
transformation/: .sqlfluff  AGENTS.md  config.yaml  dbt_project.yml  profiles.yml
transformation/models/a_raw/: raw_calendar.sql  raw_python_example.py
transformation/models/b_staging/: sources.yml  stg_house_prices.sql
transformation/models/c_marts/: calendar.sql
transformation/models/marts/: comments.sql  marts.yml  sources.yml  stories.sql
